--- a/roles/apps/monitoring-cluster/tasks/main.yml
+++ b/roles/apps/monitoring-cluster/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy Kube-prometheus-stack
-  when: install_monitoring
+  when: install_monitoring_cluster
   block:
     - name: Install the rancher-monitoring-crd Helm chart
       kubernetes.core.helm:
