Add authorized keys task in the proxy

--- a/roles/prerequises/haproxy/tasks/main.yml
+++ b/roles/prerequises/haproxy/tasks/main.yml
@@ -30,3 +30,10 @@
     - name: Set haproxy config directory
       ansible.builtin.command:
         cmd: haproxy -f {{ haproxy_config_dir }}
+
+    - name: Set authorized keys of {{ item.requester }}
+      ansible.builtin.authorized_key:
+        user: "{{ user }}"
+        state: present
+        key: "{{ item.key }}"
+      with_items: "{{ authorized_keys }}"
