Add tags to isolate master ansible tasks

--- a/client.playbook.yml
+++ b/client.playbook.yml
@@ -1,6 +1,8 @@
 ---
 - name: Initialize kube client
   hosts: localhost
-  tags: client
+  tags:
+    - client
+    - master
   roles:
     - kube_client
